[build-system]
requires = ["setuptools", "wheel", "Cython==3.2.4"]

[tool.black]
line-length = 100

[tool.isort]
line_length = 100

[tool.mypy]
python_version = "3.10"
files = ["tests"]
strict = true
follow_imports = "skip"
enable_error_code = [
  "deprecated",
  "exhaustive-match",
  "explicit-override",
  "ignore-without-code",
  "mutable-override",
  "possibly-undefined",
  "redundant-expr",
  "redundant-self",
  "truthy-bool",
  "truthy-iterable",
  "unimported-reveal",
  "unused-awaitable",
  "unused-ignore",
]

[[tool.mypy.overrides]]
module = ["a_sync.*"]
ignore_errors = true
