[build-system]
requires = ["setuptools", "wheel", "Cython==3.2.4"]

[tool.black]
line-length = 100

[tool.isort]
line_length = 100

[tool.mypy]
plugins = ["a_sync.mypy_plugin"]
files = ["a_sync"]
pretty = true
ignore_missing_imports = true
show_error_codes = true
show_error_context = true
install_types = true
non_interactive = true
enable_incomplete_feature = ["Unpack"]
